--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,13 +20,15 @@ dependencies:
   # Remote API
   data_connection_checker: ^0.3.4
   http: ^0.12.0+3
+  http_interceptor: 0.3.3
+
   # Local cache
   shared_preferences: ^0.5.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito: ^4.1.1
+  mockito: ^5.1.0
 
 flutter:
   uses-material-design: true
